base/stunner/config/resources/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: udp-gateway
  namespace: stunner
  annotations:
    stunner.l7mp.io/service-type: NodePort
    stunner.l7mp.io/nodeport: '{"udp-listener":30478}'
spec:
  gatewayClassName: stunner-gatewayclass
  addresses:
    - type: IPAddress
      value: STUNNER_HOST
  listeners:
    - name: udp-listener
      port: 30478
      protocol: TURN-UDP
      allowedRoutes:
        namespaces:
          from: All
